BUG FIX - Instant Task Dropdown Positioning Modifies the positioning of the dropdown shown by the "Instant Task" button on a Job Screen. Originally, it was positioned off the left side of the button (possibly overflowing from the screen). This change positions it aligned to the right side of the button, with the options being shown under the other buttons in this section.

--- a/src/styles/all.css
+++ b/src/styles/all.css
@@ -145,6 +145,11 @@ div.team_complete_hidden div.list-group div.team_complete div.row.clearfix {
   cursor: pointer;
 }
 
+#lighthouse_instanttask .dropdown-menu {
+  left: auto;
+  right: 0;
+}
+
 
 
 .lighthouseKeeper-modified abbr {
